# bitvm-ctv-demo

./: Cargo.toml  LICENSE  README.md
scripts/: start_btc_local_testnet.sh
src/: bitcoin_sdk.rs  common.rs  main.rs  transaction_graph.rs  transaction_graph_with_p2sh.rs
